[package]
name = "stabuse"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
tracing = "0.1.40"
env_logger = "0.11.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.1", features = [ "runtime-tokio", "tls-native-tls", "postgres", "chrono"] }
dotenv = "0.15.0"
chrono = { version = "0.4.38", features = ["serde"] }
regex = "1.11.1"
bcrypt = "0.15.1"

[dependencies.idna]
version = "=1.0.2"
